--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "htmlhint": "^1.1.4",
-    "stylelint-config-standard": "^36.0.0"
+    "stylelint": "^16.6.1",
+    "stylelint-config-standard-scss": "^13.1.0"
   }
 }
