--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "[![Actions Status](https://github.com/nudaso/layout-designer-project-56/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/nudaso/layout-designer-project-56/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx htmlhint && npx stylelint src/scss/*.scss",
+    "buildcss": "sass src/scss/styles.scss src/css/styles.css"
   },
   "keywords": [],
   "author": "",
